--- a/dropdown-cascade/src/app/components/dropdown/dropdown.component.html
+++ b/dropdown-cascade/src/app/components/dropdown/dropdown.component.html
@@ -1,3 +1,7 @@
-<p>
-  dropdown works!
-</p>
+<select (change)="onChange($event.target.value)">
+  <option *ngFor="let province of provinces" value="{{province.id}}">{{province.name}}</option>
+</select>
+
+<select>
+  <option *ngFor="let city of cities" value="{{city.id}}">{{city.name}}</option>
+</select>
