--- a/dropdown-cascade/src/app/components/dropdown/dropdown.component.html
+++ b/dropdown-cascade/src/app/components/dropdown/dropdown.component.html
@@ -1,7 +1,15 @@
-<select (change)="onChange($event.target.value)">
-  <option *ngFor="let province of provinces" value="{{province.id}}">{{province.name}}</option>
-</select>
+<div class="container mt-5">
+  <div class="form-group">
+    <label for="provinces">Provincia</label>
+    <select class="form-control" (change)="onChange($event.target.value)">
+      <option *ngFor="let province of provinces" value="{{province.id}}">{{province.name}}</option>
+    </select>
+  </div>
 
-<select>
-  <option *ngFor="let city of cities" value="{{city.id}}">{{city.name}}</option>
-</select>
+  <div class="form-group">
+    <label for="provinces">Ciudad</label>
+    <select class="form-control">
+      <option *ngFor="let city of cities" value="{{city.id}}">{{city.name}}</option>
+    </select>
+  </div>
+</div>
