Working with data from json on a server

--- a/dropdown-cascade/src/app/components/dropdown/dropdown.component.html
+++ b/dropdown-cascade/src/app/components/dropdown/dropdown.component.html
@@ -9,7 +9,7 @@
   <div class="form-group">
     <label for="provinces">Ciudad</label>
     <select class="form-control">
-      <option *ngFor="let city of cities" value="{{city.id}}">{{city.name}}</option>
+      <option *ngFor="let city of cities" value="{{city?.id}}">{{city?.name}}</option>
     </select>
   </div>
 </div>
